<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:imageSrc="@drawable/tabbar_compose_idea"
        app:titleText="@string/text"
        class="com.hbk.sinaweibodemo.ui.MoreItem"
        android:id="@+id/text_item"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:imageSrc="@drawable/tabbar_compose_photo"
        app:titleText="@string/albums"
        class="com.hbk.sinaweibodemo.ui.MoreItem"
        android:layout_toRightOf="@+id/text_item"
        android:layout_alignTop="@+id/text_item"
        android:id="@+id/albums_item"/>

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:imageSrc="@drawable/tabbar_compose_camera"
        app:titleText="@string/camera"
        class="com.hbk.sinaweibodemo.ui.MoreItem"
        android:layout_toRightOf="@+id/albums_item"
        android:layout_alignTop="@+id/albums_item"
        android:id="@+id/camera_item"/>


    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="22dp"
        app:imageSrc="@drawable/tabbar_compose_lbs"
        app:titleText="@string/check_in"
        class="com.hbk.sinaweibodemo.ui.MoreItem"
        android:layout_below="@id/text_item"
        android:layout_alignStart="@id/text_item"
        android:id="@+id/checkin_item"/>

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:imageSrc="@drawable/tabbar_compose_review"
        app:titleText="@string/review"
        class="com.hbk.sinaweibodemo.ui.MoreItem"
        android:layout_alignStart="@+id/albums_item"
        android:layout_alignTop="@id/checkin_item"
        android:id="@+id/review_item"/>

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:imageSrc="@drawable/tabbar_compose_more"
        app:titleText="@string/more"
        class="com.hbk.sinaweibodemo.ui.MoreItem"
        android:layout_alignStart="@+id/camera_item"
        android:layout_alignTop="@+id/review_item"
        android:id="@+id/more_item"/>


    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:imageSrc="@drawable/tabbar_compose_friend"
        app:titleText="@string/friend_circle"
        class="com.hbk.sinaweibodemo.ui.MoreItem"
        android:layout_alignStart="@id/text_item"
        android:layout_alignTop="@id/text_item"
        android:id="@+id/friend_circle_item"/>

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:imageSrc="@drawable/tabbar_compose_voice"
        app:titleText="@string/audio_picture"
        class="com.hbk.sinaweibodemo.ui.MoreItem"
        android:layout_alignStart="@+id/albums_item"
        android:layout_alignTop="@+id/friend_circle_item"
        android:id="@+id/audio_picture_item"/>

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:imageSrc="@drawable/tabbar_compose_shooting"
        app:titleText="@string/miaopai"
        class="com.hbk.sinaweibodemo.ui.MoreItem"
        android:layout_alignStart="@+id/camera_item"
        android:layout_alignTop="@+id/audio_picture_item"
        android:id="@+id/miaopai_item"/>


    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:imageSrc="@drawable/tabbar_compose_delete"
        app:titleText="@string/flash_delete"
        class="com.hbk.sinaweibodemo.ui.MoreItem"
        android:layout_alignStart="@+id/checkin_item"
        android:layout_alignTop="@+id/checkin_item"
        android:id="@+id/flash_delete_item"/>

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:imageSrc="@drawable/tabbar_compose_weibo"
        app:titleText="@string/blog"
        class="com.hbk.sinaweibodemo.ui.MoreItem"
        android:layout_alignStart="@+id/albums_item"
        android:layout_alignTop="@+id/flash_delete_item"
        android:id="@+id/blog_item"/>

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:imageSrc="@drawable/tabbar_compose_more"
        app:titleText="@string/collection"
        class="com.hbk.sinaweibodemo.ui.MoreItem"
        android:layout_alignStart="@+id/camera_item"
        android:layout_alignTop="@+id/blog_item"
        android:id="@+id/collection_item"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <ImageButton
            style="@style/base_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/tabbar_compose_background_icon_return"
            android:id="@+id/back_button"/>

        <ImageView

            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/table_cell_line"
            android:id="@+id/line_image"/>

        <ImageButton
            style="@style/base_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/tabbar_compose_background_icon_close"
            android:id="@+id/cancel_button"/>
    </LinearLayout>


</merge>