<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include android:layout_width="match_parent"
             android:layout_height="wrap_content"
             layout="@layout/navigation_bar_view"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:id="@+id/include"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_marginTop="107dp"
            android:src="@drawable/visitordiscover_feed_image_message"
            android:layout_below="@+id/include"
            android:layout_centerHorizontal="true"/>

    <LinearLayout
            android:id="@+id/hint_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_below="@+id/imageView">
        <TextView
                android:layout_width="279dp"
                android:gravity="center"
                android:textColor="@color/font_hint"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/message_tips"
                android:id="@+id/textView"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="102dp"
            android:gravity="center"
            android:layout_below="@id/hint_text">

        <Button
                style="@style/visitor_button"
                android:text="@string/visitor_home_sign_up"
                android:textColor="@color/font_active"
                android:id="@+id/sing_up_button"/>
        <Button
                android:layout_marginLeft="16dp"
                style="@style/visitor_button"
                android:text="@string/visitor_home_login"
                android:textColor="@color/font_normal"
                android:id="@+id/login_button"/>
    </LinearLayout>


</RelativeLayout>